--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "axios": "^1.3.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
